# native_typescript

./: .gitignore  Cargo.toml  README.md  SPECS.md  TASKS.md  fix_jsx.py  get_fr.sh  parse_tests.py  run_test_build.sh  scratch.rs  scratch.ts  test_results.txt  test_results_all.txt
.agents/: AGENTS.md
crates/tsnat-cli/: Cargo.toml
crates/tsnat-cli/src/: App.ts  App.tsx  TestForLoop.ts  main.rs  react.ts
crates/tsnat-codegen/: Cargo.toml
crates/tsnat-common/: Cargo.toml
crates/tsnat-common/src/: diagnostic.rs  interner.rs  lib.rs
crates/tsnat-eval/: Cargo.toml
crates/tsnat-eval/src/: env.rs  eval.rs  lib.rs  value.rs
crates/tsnat-eval/src/builtins/: array.ts
crates/tsnat-eval/tests/: eval_ffi.rs
crates/tsnat-ffi/: Cargo.toml
crates/tsnat-ffi/src/: invoke.rs  lib.rs  loader.rs
crates/tsnat-ffi/tests/dummy_cdylib/: Cargo.toml
crates/tsnat-ffi/tests/dummy_cdylib/src/: lib.rs
crates/tsnat-ir/: Cargo.toml
crates/tsnat-lex/: Cargo.toml
crates/tsnat-lex/src/: lexer.rs  token.rs
crates/tsnat-parse/: Cargo.toml
crates/tsnat-parse/src/: arena.rs  ast.rs  lib.rs  parser.rs  span.rs
crates/tsnat-react/: Cargo.toml  build.rs
crates/tsnat-react/src/: bin.rs  font.rs  layout.rs  lib.rs  render.rs  window.rs
crates/tsnat-react/src/fallback/: host_config.ts
crates/tsnat-types/: Cargo.toml
crates/tsnat-types/src/: assignability.rs  checker.rs  infer.rs  lib.rs  ty.rs
lib/: lib.d.ts
tests/common/: mod.rs
tests/fixtures/: add.c
tests/phase1/: diagnostic_test.rs  dummy_test.rs  interner_test.rs  lex_smoke.rs  parser_stmt_smoke.rs  parser_type_smoke.rs  parser_var_smoke.rs  repl_smoke.rs  span_test.rs  token_test.rs
tests/phase1/eval/: advanced_patterns.rs  async_generators.rs  classes.rs  control_flow.rs  destructuring_objects.rs  functions_closures.rs  modules.rs  primitives_operators.rs
tests/phase1/eval/builtins/: array.rs  collections_json.rs  string_number_math.rs
tests/phase1/lex/: keywords_operators.rs  literals.rs
tests/phase1/parse/: expressions.rs  statements.rs  types.rs
tests/phase2/: eval_smoke.rs  ffi_roundtrip.rs
tests/phase3/: check_conditionals.rs  check_generics.rs  check_objects.rs  check_primitives.rs  type_errors.rs
tests/phase4/: render_window.rs
tests/phase5/: native_binary.rs
tests_from_claude/: Cargo.toml
tools/: setup-sdl3.sh
