[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
thiserror   = "2"
miette      = { version = "7", features = ["fancy"] }
bumpalo     = "3"
rustc-hash  = "2"
indexmap    = "2"
tokio       = { version = "1", features = ["full"] }
inkwell     = { version = "0.4", features = ["llvm18-0"] }
