[package]
name = "tsnat-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
bumpalo = "3.16.0"
tsnat-common = { path = "../tsnat-common" }
tsnat-lex = { path = "../tsnat-lex" }
tsnat-parse = { path = "../tsnat-parse" }
tsnat-eval = { path = "../tsnat-eval" }
tsnat-react = { path = "../tsnat-react" }

[[test]]
name = "render_window"
path = "../../tests/phase4/render_window.rs"
